--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,12 @@ spring.data.neo4j.uri=bolt://localhost:7687
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=thesis
 
+logging.file=twitterClientlogs.txt
+
 agent.mode=manager
 agent.name=manager
 agent.monitor.jar=monitor.jar
 agent.directory=/Users/katharine/Documents/UCD/Semester \3/ms-with-agents/
-agent.logging.file=logs.txt
 agent.heartbeat.interval = 1
 agent.heartbeat.errorThreshold = 3
+agent.service.jar=service.jar
