Adding latest updates

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 		    <version>5.1.0</version>
 		    <scope>test</scope>
 		</dependency>
+		<!-- For templates -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
