--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,9 @@ agent.mode=manager
 agent.name=manager
 agent.monitor.jar=monitor.jar
 agent.directory=/Users/katharine/Documents/UCD/Semester \3/ms-with-agents/
-agent.heartbeat.interval = 1
+agent.heartbeat.interval = 3
 agent.heartbeat.errorThreshold = 3
 agent.heartbeat.initialDelay = 45
-agent.service.jar=service.jar
 
 spring.boot.admin.username=admin
 spring.boot.admin.password=admin
@@ -22,3 +21,12 @@ monitoring.metrics.filter=jvm.memory.used;jvm.memory.max;system.cpu.usage
 monitoring.interval = 3
 monitoring.errorThreshold = 3
 monitoring.initialDelay = 45
+
+qlearning.lowerRewardThreshold = -50
+qlearning.gamma = 0.7
+qlearning.alpha = 0.8
+qlearning.epsilon = 0.1
+qlearning.preferNoAction = true
+qlearning.disable = true
+
+experiment=0
