--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port=${port:7070}
+server.port=${port:9010}
 spring.data.neo4j.uri=bolt://localhost:7687
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=thesis
 
-logging.file=twitterClientlogs.txt
+logging.file=twitterClient-monitoring_agent.txt
 
-agent.mode=manager
-agent.name=manager
+agent.mode=monitor
+agent.name=mockService-monitoring_agent
 agent.monitor.jar=monitor.jar
 agent.directory=/Users/katharine/Documents/UCD/Semester \3/ms-with-agents/
 agent.heartbeat.interval = 3
@@ -29,4 +29,4 @@ qlearning.epsilon = 0.1
 qlearning.preferNoAction = true
 qlearning.disable = true
 
-experiment=0
+experiment=2
