Updates to monitor learning process and inclusion of more tests. Rewrite of eventStore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,15 @@
-server.port=${port:7070}
+server.port=${port:9010}
 spring.data.neo4j.uri=bolt://localhost:7687
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=thesis
 
-logging.file=managerAgentLogs.txt
-logging.level.org.neo4j=ERROR
-logging.level.root=INFO
+logging.file=monitoring_agent_logs.txt
 
-agent.mode=manager
-agent.name=manager
+agent.mode=monitor
+agent.name=mockService-monitoring_agent
 agent.monitor.jar=monitor.jar
 agent.directory=/Users/katharine/Documents/UCD/Semester \3/ms-with-agents/
-agent.heartbeat.interval = 10
+agent.heartbeat.interval = 3
 agent.heartbeat.errorThreshold = 3
 agent.heartbeat.initialDelay = 45
 
@@ -22,13 +20,13 @@ monitoring.metrics.endpoint=actuator/metrics
 monitoring.metrics.filter=jvm.memory.used;jvm.memory.max;system.cpu.usage
 monitoring.interval = 1
 monitoring.errorThreshold = 3
-monitoring.initialDelay = 60
+monitoring.initialDelay = 45
 
 qlearning.lowerRewardThreshold = -10
 qlearning.gamma = 0.7
 qlearning.alpha = 0.8
-qlearning.epsilon = 0.5
-qlearning.preferNoAction = false
-qlearning.disable = false
+qlearning.epsilon = 0.1
+qlearning.preferNoAction = true
+qlearning.disable = true
 
 experiment=1
